--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-light-bootstrap-dashboard",
+  "name": "bom-destino-vue",
   "version": "2.0.0",
   "private": true,
   "description": "Vue light bootstrap dashboard",
